# hugr-jeff

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  README.md  devenv.nix  flake.nix  justfile
.github/: change-filters.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
src/: extension.rs  lib.rs  optype.rs  to_hugr.rs  to_jeff.rs  types.rs
src/extension/: jeff_op.rs  jeff_type.rs
src/optype/: control_flow.rs  float.rs  function.rs  int.rs  int_array.rs  qubit.rs  qubit_array.rs  to_hugr.rs
src/test/: mod.rs
test_files/: README.md
test_files/catalyst_simple/: README.md
test_files/catalyst_tket_opt/: README.md
test_files/entangled_calls/: README.md
test_files/entangled_qs/: README.md
