[package]
name = "hugr-jeff"
version = "0.1.0"

readme = "README.md"
license = { workspace = true }
documentation = "https://docs.rs/hugr-jeff/"
repository = { workspace = true }
homepage = { workspace = true }
description = "Translation between Quantinuum's HUGR and the _jeff_ common representation for hybrid quantum programs."
keywords = ["Quantum"]
categories = ["compilers"]
authors = ["Agustín Borgna <agustin.borgna@quantinuum.com>"]
rust-version = { workspace = true }
edition = { workspace = true }

[workspace]
members = [".", "cli"]
default-members = [".", "cli"]

[workspace.package]

edition = "2024"
rust-version = "1.89.0"
homepage = "https://github.com/cqcl/hugr-jeff"
repository = "https://github.com/cqcl/hugr-jeff"
license = "Apache-2.0"

[dependencies]
derive_more = { workspace = true }
hugr = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smol_str = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tket = { workspace = true }
typetag = { workspace = true }
jeff-quantum = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
iai-callgrind = { workspace = true }
rstest = { workspace = true }
itertools = { workspace = true }

[workspace.dependencies]

criterion = "0.7.0"
iai-callgrind = "0.16.1"
rstest = "0.26.1"
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
hugr = "0.22.2"
lazy_static = "1.5.0"
serde = { version = "1.0" }
smol_str = "0.3.2"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tket = "0.14.0"
typetag = "0.2.7"
itertools = "0.14.0"
jeff-quantum = { version = "0.1.0", git = "https://github.com/unitaryfoundation/jeff.git", rev = "6fdce373e" }
clap = { version = "4.5.45", features = ["derive"] }
serde_json = "1.0.143"

[workspace.lints.rust]
missing_docs = "warn"
